plt-scheme (4.2.4-2) UNRELEASED; urgency=low

  * Pull patch from upstream to fix building on Sparc.
  * debian/control: Change libjpeg62-dev Build-Depends to libjpeg-dev.

 -- James Vega <jamessan@debian.org>  Wed, 10 Feb 2010 08:57:16 -0500

plt-scheme (4.2.4-1) unstable; urgency=low

  [ Ari Pollak ]
  * Convert to 3.0 (quilt) format, no patches necessary yet

  [ James Vega ]
  * New upstream version
  * debian/control:
    - Add myself to Uploaders.
    - Change XS-Vcs-* to Vcs-* and correct a typo in the URLs.
    - Add ${misc:Depends}.
    - Remove description of ProfessorJ.
  * debian/rules:
    - Remove binary-post-install/plt-scheme target since collects/profj
      no longer exists.
    - Add -g to CFLAGS.
  * debian/overrides/plt-scheme: Add an override for the embedded-zlib while
    working with upstream to find a fix they'll agree to.

 -- James Vega <jamessan@debian.org>  Sun, 07 Feb 2010 21:51:09 -0500

plt-scheme (4.2.1-1) unstable; urgency=low

  * New upstream version

 -- Ari Pollak <ari@debian.org>  Mon, 10 Aug 2009 11:29:40 -0400

plt-scheme (4.1.5-1) unstable; urgency=low

  * New upstream version 

 -- Ari Pollak <ari@debian.org>  Sun, 22 Mar 2009 21:55:44 -0400

plt-scheme (4.1.4-1) unstable; urgency=low

  * New upstream version

 -- Ari Pollak <ari@debian.org>  Wed, 21 Jan 2009 08:53:59 -0500

plt-scheme (4.1.3-1) unstable; urgency=low

  * New upstream version

 -- Ari Pollak <ari@debian.org>  Mon, 24 Nov 2008 13:43:11 -0500

plt-scheme (4.1.2-1) unstable; urgency=low

  * New upstream version 

 -- Ari Pollak <ari@debian.org>  Tue, 28 Oct 2008 20:06:59 -0400

plt-scheme (4.1.1-1) unstable; urgency=low

  * Make sure cdbs' and dpkg-buildpackage's CFLAGS and CXXFLAGS aren't passed
    through to configure and make, so we don't get surprising behavior that
    upstream isn't expecting.
  * Update package description from PLT website (Closes: #491636)

 -- Ari Pollak <ari@debian.org>  Sun, 05 Oct 2008 16:45:08 -0400
