@@ -2,6 +2,8 @@ plt-scheme (4.2.4-2) UNRELEASED; urgency=low
 
   * Pull patch from upstream to fix building on Sparc.
   * debian/control: Change libjpeg62-dev Build-Depends to libjpeg-dev.
+  * debian/rules: Use the Boehm garbage collector on archs where the 3m one
+    doesn't work.
 
  -- James Vega <jamessan@debian.org>  Wed, 10 Feb 2010 08:57:16 -0500
 
